tried fixing layout bug, changed bg to greyish

--- a/web-app/components/dino-scroll/wheel.css
+++ b/web-app/components/dino-scroll/wheel.css
@@ -1,5 +1,5 @@
 .wheel{
-    background-image: url(../../public/dino-bike/wheel.png);
+    background-image: url(../../dino-bike/wheel.png);
     background-size: contain;
     width: 100px;
     height: 100px;
